--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "prettier": "^3.0.3",
+    "vue": "^3.2.13",
+    "vuetify": "^3.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +20,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
